fixed wrong scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,10 @@
   background-color: #ffc990;
   font-family: sans-serif;
 }
+#root{
+  overflow: hidden;
+  inset: 0;
+}
+body{
+  margin: 0;
+}
